overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,6 @@ p {
   margin-bottom: 65px;
 }
 .features .main .item-1 {
-  overflow-x: hidden;
   background: var(--mf-gray-100);
   padding: 100px 0;
 }
@@ -307,7 +306,6 @@ p {
   color: var(--mf-orange);
 }
 .features .main .item-2 {
-  Overflow-x: hidden;
   width: 100%;
   background: url(../images/svg/feature-bg.svg) no-repeat center;
   background-size: cover;
